--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,10 +2,10 @@ name: PHP
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
 
 permissions:
   contents: read
@@ -79,9 +79,9 @@ jobs:
     - name: Run Base Ws Tests
       if: env.important_modified == 'true'
       run: npm run test-base-ws-php
-    - name: Run Id Tests
-      if: env.important_modified == 'true'
-      run: npm run id-tests-php
+    # - name: Run Id Tests
+    #   if: env.important_modified == 'true'
+    #   run: npm run id-tests-php
     - name: Request tests
       if: env.important_modified == 'true'
       run: npm run request-php
