--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,10 +2,10 @@ name: Python
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
 
 permissions:
   contents: read
@@ -71,9 +71,9 @@ jobs:
     - name: Run Base Ws Tests
       if: env.important_modified == 'true'
       run: npm run test-base-ws-py
-    - name: Run Id Tests
-      if: env.important_modified == 'true'
-      run: npm run id-tests-py
+    # - name: Run Id Tests
+    #   if: env.important_modified == 'true'
+    #   run: npm run id-tests-py
     - name: Request tests
       if: env.important_modified == 'true'
       run: npm run request-py
