--- a/.github/workflows/go-app.yml
+++ b/.github/workflows/go-app.yml
@@ -117,45 +117,45 @@ jobs:
             git pull --rebase --autostash origin master
             git push
 
-  live-tests:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download shared_env
-        uses: actions/download-artifact@v4
-        with:
-          name: shared_env
-      # - name: Download Go Files
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: go-files
-      #     path: go/
-      # - uses: actions/checkout@v4
-      - name: Download Go Binary
-        uses: actions/download-artifact@v4
-        with:
-          name: go-files
-          path: go/
-      - name: Build tests
-        run: cd  go/ && go build ./tests/main.go
-      - name: Install npm dependencies
-        run: npm ci --include=dev
-      - name: Export exchanges
-        run: npm run export-exchanges
-      # - name: Install dependencies
-      #   run: go get ./go/v4
-      # - name: Build
-      #   run: go build ./go/v4
-      # - name: Build tests
-      #   run: go build ./go/tests/main.go
-      # - name: Adjust permissions
-      #   run: cd go && chmod +x main
-      - name: Live tests
-        if: env.important_modified == 'true'
-        run: cd go/ && npm run live-tests-rest-go
-      - name: Live tests (specific)
-        if: env.important_modified == 'false'
-        run: ./run-tests-simul.sh --go "${{ env.rest_files }}"
+  # live-tests:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Download shared_env
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: shared_env
+  #     # - name: Download Go Files
+  #     #   uses: actions/download-artifact@v4
+  #     #   with:
+  #     #     name: go-files
+  #     #     path: go/
+  #     # - uses: actions/checkout@v4
+  #     - name: Download Go Binary
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: go-files
+  #         path: go/
+  #     - name: Build tests
+  #       run: cd  go/ && go build ./tests/main.go
+  #     - name: Install npm dependencies
+  #       run: npm ci --include=dev
+  #     - name: Export exchanges
+  #       run: npm run export-exchanges
+  #     # - name: Install dependencies
+  #     #   run: go get ./go/v4
+  #     # - name: Build
+  #     #   run: go build ./go/v4
+  #     # - name: Build tests
+  #     #   run: go build ./go/tests/main.go
+  #     # - name: Adjust permissions
+  #     #   run: cd go && chmod +x main
+  #     - name: Live tests
+  #       if: env.important_modified == 'true'
+  #       run: cd go/ && npm run live-tests-rest-go
+  #     - name: Live tests (specific)
+  #       if: env.important_modified == 'false'
+  #       run: ./run-tests-simul.sh --go "${{ env.rest_files }}"
 
 
