--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -152,33 +152,33 @@ jobs:
         git push origin HEAD:master
         cd ../..
 
-  live-tests:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download shared_env
-        uses: actions/download-artifact@v4
-        with:
-          name: shared_env
-      - name: Download JS Files
-        uses: actions/download-artifact@v4
-        with:
-          name: js-files
-          path: js/
-      - name: Restore shared_env
-        run: ./utils/restore_shared_env.sh
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install npm dependencies
-        run: npm ci --include=dev
-      - name: Export exchanges
-        run: npm run export-exchanges
-      - name: Live tests
-        if: env.important_modified == 'true'
-        run: ./run-tests-simul.sh --js
-      - name: Live tests (specific)
-        if: env.important_modified == 'false'
-        run: ./run-tests-simul.sh --js "${{ env.rest_files }}" "${{ env.ws_files }}"
+  # live-tests:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Download shared_env
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: shared_env
+  #     - name: Download JS Files
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: js-files
+  #         path: js/
+  #     - name: Restore shared_env
+  #       run: ./utils/restore_shared_env.sh
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+  #         cache: 'npm'
+  #     - name: Install npm dependencies
+  #       run: npm ci --include=dev
+  #     - name: Export exchanges
+  #       run: npm run export-exchanges
+  #     - name: Live tests
+  #       if: env.important_modified == 'true'
+  #       run: ./run-tests-simul.sh --js
+  #     - name: Live tests (specific)
+  #       if: env.important_modified == 'false'
+  #       run: ./run-tests-simul.sh --js "${{ env.rest_files }}" "${{ env.ws_files }}"
