--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -130,43 +130,43 @@ jobs:
           git pull --rebase --autostash origin master
           git push
 
-  live-tests:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download shared_env
-        uses: actions/download-artifact@v4
-        with:
-          name: shared_env
-      - name: Download PHP Files
-        uses: actions/download-artifact@v4
-        with:
-          name: php-files
-          path: php/
-      - name: Restore shared_env
-        run: ./utils/restore_shared_env.sh
-      - name: Setup PHP with PECL extension
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
-          # cache: true
-          ini-values: |
-            zend.assertions=1
-            display_errors=On
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      - name: Install npm dependencies
-        run: npm ci --include=dev
-      - name: Composer install
-        run: composer install
-      - name: Export exchanges
-        run: npm run export-exchanges
-      - name: Live tests
-        if: env.important_modified == 'true'
-        run: ./run-tests-simul.sh --php-async
-      - name: Live tests (specific)
-        if: env.important_modified == 'false'
-        run: ./run-tests-simul.sh --php-async "${{ env.rest_files }}" "${{ env.ws_files }}"
+  # live-tests:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Download shared_env
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: shared_env
+  #     - name: Download PHP Files
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: php-files
+  #         path: php/
+  #     - name: Restore shared_env
+  #       run: ./utils/restore_shared_env.sh
+  #     - name: Setup PHP with PECL extension
+  #       uses: shivammathur/setup-php@v2
+  #       with:
+  #         php-version: '8.4'
+  #         # cache: true
+  #         ini-values: |
+  #           zend.assertions=1
+  #           display_errors=On
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+  #         cache: 'npm'
+  #     - name: Install npm dependencies
+  #       run: npm ci --include=dev
+  #     - name: Composer install
+  #       run: composer install
+  #     - name: Export exchanges
+  #       run: npm run export-exchanges
+  #     - name: Live tests
+  #       if: env.important_modified == 'true'
+  #       run: ./run-tests-simul.sh --php-async
+  #     - name: Live tests (specific)
+  #       if: env.important_modified == 'false'
+  #       run: ./run-tests-simul.sh --php-async "${{ env.rest_files }}" "${{ env.ws_files }}"
